--- a/Community Finding.ipynb
+++ b/Community Finding.ipynb
@@ -691,18 +691,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'emaiLeiden' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_95928/2492894941.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnmi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memailLouvain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memaiLeiden\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnmi2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memailLouvain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memailGN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnmi3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memailLouvain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memailInfomap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnmi4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memailLeiden\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0memailInfomap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'emaiLeiden' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized Mutual Information between Louvain and Leiden: MatchingResult(score=0.8675582735930573, std=None)\n",
+      "Normalized Mutual Information between Louvain and Girvan-Newman: MatchingResult(score=0.1746120855787828, std=None)\n",
+      "Normalized Mutual Information between Louvain and Infomap: MatchingResult(score=0.7176448635830378, std=None)\n",
+      "Normalized Mutual Information between Leiden and Infomap: MatchingResult(score=0.7429986148274224, std=None)\n"
      ]
     }
    ],
@@ -727,32 +726,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NMI for Louvain and labels: MatchingResult(score=0.5882969131854163, std=None)\n",
-      "NMI for Leiden and labels: MatchingResult(score=0.5776771281141226, std=None)\n",
-      "NMI for Girvan-Newman and labels: MatchingResult(score=0.0449480988954229, std=None)\n",
-      "\n",
-      "AMI for Louvain and labels: MatchingResult(score=0.5527517337989198, std=None)\n",
-      "AMI for Leiden and labels: MatchingResult(score=0.540992332601562, std=None)\n",
-      "AMI for Girvan-Newman and labels: MatchingResult(score=-0.0005067215292382119, std=None)\n",
-      "\n",
-      "ARI for Louvain and labels: MatchingResult(score=0.3311391803457487, std=None)\n",
-      "ARI for Leiden and labels: MatchingResult(score=0.2985758824644375, std=None)\n",
-      "NMI for Girvan-Newman and labels: MatchingResult(score=-0.0012481583268392242, std=None)\n",
-      "\n",
-      "F1 for Louvain and labels: MatchingResult(score=0.21592592592592594, std=0.2803999690819878)\n",
-      "F1 for Leiden and labels: MatchingResult(score=0.2082142857142857, std=0.27508509815053567)\n",
-      "F1 for Girvan-Newman and labels: MatchingResult(score=0.05695652173913045, std=0.050599431394699676)\n",
-      "\n",
-      "VOI for Louvain and labels: MatchingResult(score=3.2163956901538038, std=None)\n",
-      "VOI for Leiden and labels: MatchingResult(score=3.245985910498302, std=None)\n",
-      "VOI for Girvan-Newman and labels: MatchingResult(score=4.848380933791979, std=None)\n"
+      "NMI for Louvain and labels: MatchingResult(score=0.5366011675942916, std=None)\n",
+      "NMI for Leiden and labels: MatchingResult(score=0.5786795021241535, std=None)\n",
+      "NMI for Girvan-Newman and labels: MatchingResult(score=0.07536831417135229, std=None)\n",
+      "NMI for Infomap and labels: MatchingResult(score=0.5370080955195163, std=None)\n"
      ]
     }
    ],
@@ -777,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,34 +882,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NMI for Louvain and labels: MatchingResult(score=0.5882969131854163, std=None)\n",
-      "NMI for Leiden and labels: MatchingResult(score=0.5776771281141226, std=None)\n",
-      "NMI for Girvan-Newman and labels: MatchingResult(score=0.0449480988954229, std=None)\n",
-      "\n",
-      "AMI for Louvain and labels: MatchingResult(score=0.5527517337989198, std=None)\n",
-      "AMI for Leiden and labels: MatchingResult(score=0.540992332601562, std=None)\n",
-      "AMI for Girvan-Newman and labels: MatchingResult(score=-0.0005067215292382119, std=None)\n",
-      "\n",
-      "ARI for Louvain and labels: MatchingResult(score=0.3311391803457487, std=None)\n",
-      "ARI for Leiden and labels: MatchingResult(score=0.2985758824644375, std=None)\n",
-      "NMI for Girvan-Newman and labels: MatchingResult(score=-0.0012481583268392242, std=None)\n",
-      "\n",
-      "F1 for Louvain and labels: MatchingResult(score=0.21592592592592594, std=0.2803999690819878)\n",
-      "F1 for Leiden and labels: MatchingResult(score=0.2082142857142857, std=0.27508509815053567)\n",
-      "F1 for Girvan-Newman and labels: MatchingResult(score=0.05695652173913045, std=0.050599431394699676)\n",
-      "\n",
-      "VOI for Louvain and labels: MatchingResult(score=3.2163956901538038, std=None)\n",
-      "VOI for Leiden and labels: MatchingResult(score=3.245985910498302, std=None)\n",
-      "VOI for Girvan-Newman and labels: MatchingResult(score=4.848380933791979, std=None)\n"
+      "317080\n"
+     ]
+    }
+   ],
+   "source": [
+    "dblpLabels = readwrite.read_community_csv(\"dblpLabelsComplete.txt\", \"\\t\", str)\n",
+    "print(len(list(dblpLabels.to_node_community_map().keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "260998\n"
+     ]
+    }
+   ],
+   "source": [
+    "dblpLabels = readwrite.read_community_csv(\"dblpLabels.txt\", \"\\t\", str)\n",
+    "print(len(list(dblpLabels.to_node_community_map().keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [317080, 775902]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_95928/3975957014.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnmiLouvainLabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdblpLouvain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdblpLabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnmiLeidenLabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdblpLeiden\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdblpLabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#nmiGirvanNewmanLabels = emailGN.normalized_mutual_information(emailLabels)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnmiInfomapLabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdblpInfomap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdblpLabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/cdlib/classes/node_clustering.py\u001b[0m in \u001b[0;36mnormalized_mutual_information\u001b[0;34m(self, clustering)\u001b[0m\n\u001b[1;32m    713\u001b[0m         \"\"\"\n\u001b[1;32m    714\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 715\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mevaluation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalized_mutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclustering\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    716\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    717\u001b[0m     def overlapping_normalized_mutual_information_LFK(\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/cdlib/evaluation/comparison.py\u001b[0m in \u001b[0;36mnormalized_mutual_information\u001b[0;34m(first_partition, second_partition)\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m     return MatchingResult(\n\u001b[0;32m---> 99\u001b[0;31m         \u001b[0mscore\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnormalized_mutual_info_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_partition_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond_partition_c\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m     )\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0mextra_args\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mextra_args\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m             \u001b[0;31m# extra_args > 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/sklearn/metrics/cluster/_supervised.py\u001b[0m in \u001b[0;36mnormalized_mutual_info_score\u001b[0;34m(labels_true, labels_pred, average_method)\u001b[0m\n\u001b[1;32m    997\u001b[0m       \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    998\u001b[0m     \"\"\"\n\u001b[0;32m--> 999\u001b[0;31m     \u001b[0mlabels_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_clusterings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1000\u001b[0m     \u001b[0mclasses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1001\u001b[0m     \u001b[0mclusters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/sklearn/metrics/cluster/_supervised.py\u001b[0m in \u001b[0;36mcheck_clusterings\u001b[0;34m(labels_true, labels_pred)\u001b[0m\n\u001b[1;32m     65\u001b[0m         raise ValueError(\n\u001b[1;32m     66\u001b[0m             \"labels_pred must be 1D: shape is %r\" % (labels_pred.shape,))\n\u001b[0;32m---> 67\u001b[0;31m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlabels_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    317\u001b[0m     \u001b[0muniques\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlengths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 319\u001b[0;31m         raise ValueError(\"Found input variables with inconsistent numbers of\"\n\u001b[0m\u001b[1;32m    320\u001b[0m                          \" samples: %r\" % [int(l) for l in lengths])\n\u001b[1;32m    321\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [317080, 775902]"
      ]
     }
    ],
@@ -950,17 +962,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Louvain Girvan-Newman mod: FitnessResult(min=None, max=None, score=0.4318206751448841, std=None)\n",
-      "Louvain Erdos-Renyi mod: FitnessResult(min=None, max=None, score=0.4549865127361685, std=None)\n",
-      "Louvain Z-mod: FitnessResult(min=None, max=None, score=1.1462260420651909, std=None)\n",
-      "gn Girvan-Newman mod: FitnessResult(min=None, max=None, score=0.0031087073868774446, std=None)\n"
+      "Louvain modularity: FitnessResult(min=None, max=None, score=0.8201511503460983, std=None)\n",
+      "Leiden modularity: FitnessResult(min=None, max=None, score=0.8318275670531278, std=None)\n",
+      "Infomap modularity: FitnessResult(min=None, max=None, score=9.286631579479101e-05, std=None)\n"
      ]
     }
    ],
@@ -985,18 +996,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [04:43<00:00, 28.35s/it]\n",
-      "No handles with labels found to put in legend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lfr, _ = LFR(500, 3, 1.5, 0.1, average_degree=5, min_community=20)\n",
     "levels = [7, 9, 11, 13, 15, 17, 19, 21, 23, 25]\n",
@@ -1038,14 +1040,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [09:30<00:00, 81.54s/it]\n"
+      "100%|██████████| 7/7 [17:28<00:00, 149.79s/it]\n"
      ]
     }
    ],
@@ -1086,7 +1088,7 @@
     "ax.plot(mus,resultsLouvain, \"-ro\", label = \"Louvain\")\n",
     "ax.plot(mus,resultsLeiden, \"-go\", label = \"Leiden\")\n",
     "ax.plot(mus,resultsInfomap, \"-bo\", label = \"Infomap\")\n",
-    "ax.plot(mus,resultsGN, \"-yo\", label = \"Girvan-Newman\")\n",
+    "ax.plot(mus,resultsGN, \"-yo\", label = \"GN\")\n",
     "\n",
     "ax.set_xlabel(chr(945+11))\n",
     "ax.set_ylabel(\"Performance\")\n",
@@ -1258,14 +1260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [09:50<00:00, 53.71s/it]\n"
+      "100%|██████████| 11/11 [11:01<00:00, 60.12s/it]\n"
      ]
     }
    ],
