--- a/Community Finding.ipynb
+++ b/Community Finding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
     "    print(network.name)\n",
     "    modularity_vals = []\n",
     "    bestGNscore = 0\n",
-    "    bestGNcut = 0\n",
+    "    bestGNtrial = 0\n",
     "    for t in tqdm(trials):\n",
     "        Flags = \"--silent -N \"\n",
     "        Flags += str(t)\n",
@@ -1016,6 +1016,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lfr\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 12/12 [00:04<00:00,  2.66it/s]\n",
+      "No handles with labels found to put in legend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best modularity with 0 is: 0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "lfr, _ = LFR(500, 3, 1.5, 0.2, average_degree=5, min_community=20)\n",
+    "lfr.name = \"lfr\"\n",
+    "trials = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+    "bestInfomap(lfr,trials)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1243,6 +1278,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sbm\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 12/12 [00:04<00:00,  2.61it/s]\n",
+      "No handles with labels found to put in legend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best modularity with 0 is: 0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "sizes = [32, 32, 32, 32]\n",
+    "c = 0.1\n",
+    "probs = [[0.8, c, c, c], [c, 0.8, c, c], [c, c, 0.8, c],[c, c, c, 0.8]]\n",
+    "sbm, _ = SBM(sizes, probs, seed=10)\n",
+    "sbm.name = \"sbm\"\n",
+    "trials = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+    "bestInfomap(sbm,trials)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1406,7 +1479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
