--- a/Community Finding.ipynb
+++ b/Community Finding.ipynb
@@ -25,7 +25,8 @@
     "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "import pickle"
+    "import pickle\n",
+    "import os"
    ]
   },
   {
@@ -34,6 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def check_folder(path):\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)\n",
+    "        \n",
+    "check_folder(Path(\"Figures\"))\n",
     "figurePath = Path(\"Figures\")"
    ]
   },
@@ -1479,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
